<resources>
    <string name="facebook_app_id">1128774920466063</string>
    <string name="fb_login_protocol_scheme">fb1128774920466063</string>
    <string name="facebook_client_token">30b6cd381e759a67b51b1f68d4df08c0</string>
    <string name="fitbit_login_protocol_scheme">ntdevfitbitauth</string>
    <string name="strava_login_protocol_scheme">ntdevstravaauth</string>
    <string name="mobile_new_app_update_forced_description">We are migrating to an upgraded version of the app.  Please download the new version of the app from the app store.</string>
    <string name="mobile_new_app_update_forced_button">Go to App Store</string>
    <string name="mobile_new_app_update_recommended_description">We are migrating to an upgraded version of the app.  We recommend downloading the new version of the app from the app store.</string>
    <string name="mobile_new_app_update_recommended_button">Go to App Store</string>
    <string name="mobile_new_version_update_forced_description">A new version of the app is available in the app store.  Please update to the latest version in the app store to stay up to date on the latest features.</string>
    <string name="mobile_new_version_update_forced_button">Go to App Store</string>
    <string name="mobile_new_version_update_recommended_description">A new version of the app is available in the app store.  We recommend upgrading to the latest version in the app store to stay up to date on the latest features.</string>
    <string name="mobile_new_version_update_recommended_button">Go to App Store</string>
    <string name="mobile_error_unavailable">The app is not available right now. Please try again later.</string>
    <string name="mobile_alert_close">Close</string>
    <string name="mobile_alert_button">Button</string>
    <string name="mobile_alert_close_button">, Close Button</string>
    <string name="mobile_help_button_description">help</string>
    <string name="mobile_slide_button_description">change slide</string>
    <string name="mobile_slide_button_previous_arrow">previous slide button</string>
    <string name="mobile_slide_button_next_arrow">next slide button</string>
    <string name="mobile_menu_description_collapsed">view menu, collapsed</string>
    <string name="mobile_menu_description_expanded">view menu, expanded</string>
    <string name="mobile_messages_unavailable">Messages is unavailable</string>
    <string name="mobile_close_modal">Close</string>
    <string name="mobile_url_opening_error">There was an error opening this link. Please try again later.</string>
    <string name="mobile_disruptions_close">CLOSE</string>
    <string name="mobile_login_heading">Participant Login</string>
    <string name="mobile_login_subheading">Manage your Fundraising on the GO.</string>
    <string name="mobile_login_login_code_subheading">Enter your registration email address and trigger a login code.</string>
    <string name="mobile_login_login_enter_code_subheading">Enter your login code sent to your email address to login.</string>
    <string name="mobile_login_button">LOGIN</string>
    <string name="mobile_login_login_code">LOGIN CODE</string>
    <string name="mobile_login_email_code_button">GET LOGIN CODE</string>
    <string name="mobile_login_email_new_code_button">GET NEW LOGIN CODE</string>
    <string name="mobile_login_missing_email">Please enter a valid email to log in.</string>
    <string name="mobile_login_incorrect_code">The login code was invalid. Please verify the code received in your email.</string>
    <string name="mobile_login_registration">Not yet registered for an event?</string>
    <string name="mobile_login_registration_link">Register Now</string>
    <string name="mobile_login_registration_link_description">Register Now Link</string>
    <string name="mobile_login_registering_multiple_link">Registering multiple students?</string>
    <string name="mobile_login_registering_multiple_link_description">Registering multiple students link</string>
    <string name="mobile_login_help_link">Need Help?</string>
    <string name="mobile_login_staff_login">Staff Login</string>
    <string name="mobile_login_help_link_description">Need Help Link</string>
    <string name="mobile_login_powered_by">POWERED BY</string>
    <string name="mobile_login_image_description">Logo</string>
    <string name="mobile_login_email">EMAIL</string>
    <string name="mobile_login_username">USERNAME</string>
    <string name="mobile_login_password">PASSWORD</string>
    <string name="mobile_login_toggle_password_visibility">Toggle Password</string>
    <string name="mobile_login_forgot_password">Forgot Password?</string>
    <string name="mobile_login_forgot_password_description">Forgot Password Link</string>
    <string name="mobile_login_remember_me">Remember Me</string>
    <string name="mobile_login_failed">Unable to login. Please check your credentials and try again.</string>
    <string name="mobile_login_locked">Your account is locked out. Please try again later.</string>
    <string name="mobile_login_missing_credentials">Please enter a username and password to log in.</string>
    <string name="mobile_login_pick_event">Pick your event from the list below:</string>
    <string name="mobile_login_no_events">Not registered for any events. Please register for an event and try again.</string>
    <string name="mobile_login_biometric_login">Login Using Face ID</string>
    <string name="mobile_login_biometric_missing_credentials">Please enter your username and password to enable biometric login.</string>
    <string name="mobile_login_biometric_failed">Biometric login failed. Please try logging in with a username and password.</string>
    <string name="mobile_login_biometric_failed_no_fingerprints">Biometric login failed, no fingerprints are registered. Please try logging in with a username and password.</string>
    <string name="mobile_login_build">Build</string>
    <string name="mobile_login_version">Version</string>
    <string name="mobile_login_privacy_policy">Privacy Policy</string>
    <string name="mobile_login_register_now_modal_title">FIND YOUR WALK</string>
    <string name="mobile_login_register_now_modal_search">SEARCH</string>
    <string name="mobile_login_register_now_modal_walks_near_you">WALKS NEAR YOU</string>
    <string name="mobile_login_register_now_modal_no_events">No events found. Please choose another state.</string>
    <string name="mobile_login_register_now_not_registered">You\'re not registered for an active event. If you have another account, your can try again. You can find a Walk near you and register today.</string>
    <string name="mobile_login_register_now_register_button">Register</string>
    <string name="mobile_login_register_now_url_back_link">Back</string>
    <string name="mobile_login_register_now_wrong_account">Your login still isn\'t linked to a valid event. Please verify you are logged in as the correct user and you selected a valid event.</string>
    <string name="mobile_login_register_now_modal_title_previous_event">WALK RECOMMENDATION</string>
    <string name="mobile_login_nuclavis_description">Nuclavis</string>
    <string name="mobile_login_finns_image_description">Finns Mission Experience</string>
    <string name="mobile_login_finns_prize_description">Finns Mission Prize</string>
    <string name="mobile_login_finns_mission_completed">Earn your lifesavers gift unlocked badge</string>
    <string name="mobile_login_finns_mission_not_completed">Earn your lifesavers gift locked badge</string>
    <string name="mobile_login_unlock_experience">UNLOCK EXPERIENCE</string>
    <string name="mobile_login_ar_camera_permissions_error">You must give permissions to use your camera in your phone settings in order to use the augmented reality.</string>
    <string name="mobile_login_reconnect_event_link">Need to connect to a different event?</string>
    <string name="mobile_login_internal_register_heading">Register for the Challenge</string>
    <string name="mobile_login_internal_register_subheading">Not yet started?</string>
    <string name="mobile_login_internal_register_instructions">Enter your name and email to get started.</string>
    <string name="mobile_login_internal_register_name">NAME</string>
    <string name="mobile_login_internal_register_email">EMAIL</string>
    <string name="mobile_login_internal_waiver_prefix_android">By signing up you\'re agreeing to the waiver.</string>
    <string name="mobile_login_internal_waiver_android">waiver</string>
    <string name="mobile_login_internal_register_sign_in_android">REGISTER &amp; SIGN IN</string>
    <string name="mobile_login_internal_login_heading">Already Registered? Login</string>
    <string name="mobile_login_internal_login_subheading">Enter your registration email address and trigger a login code.</string>
    <string name="mobile_login_internal_login_email">EMAIL</string>
    <string name="mobile_login_internal_login_get_code">GET LOGIN CODE</string>
    <string name="mobile_login_internal_missing_credentials">Please enter a name and valid email, and accept the waiver to register.</string>
    <string name="mobile_container_login_title">Go Mobile</string>
    <string name="mobile_container_login_description">P2P Go Mobile allows participants to fundraise on the go and connect activity tracking</string>
    <string name="mobile_container_login_code_label">Enter your event code to connect</string>
    <string name="mobile_container_login_connect">CONNECT</string>
    <string name="mobile_container_login_need_help">Need Help?</string>
    <string name="mobile_container_login_build">Build</string>
    <string name="mobile_container_login_version">Version</string>
    <string name="mobile_overview_facebook_url_description">Your Facebook Fundraiser URL</string>
    <string name="mobile_overview_facebook_connect_title">FACEBOOK CONNECT</string>
    <string name="mobile_overview_facebook_connect_get_started">Get Started</string>
    <string name="mobile_overview_facebook_connect_creating">Creating a Facebook Fundraiser</string>
    <string name="mobile_overview_facebook_connected_description">Use Facebook\'s fundraising tools to invite friends, share updates and collect donations.  We\'ll keep track of your progress on facebook and on your page, so you\'ll always know how close you are to reaching your goal</string>
    <string name="mobile_overview_facebook_connect_view_link">VIEW</string>
    <string name="mobile_overview_facebook_connect_copy_link">COPY</string>
    <string name="mobile_overview_event_checkin_title">EVENT CHECK-IN</string>
    <string name="mobile_overview_event_checkin_subtitle_android">It\'s time to check-in for the event.</string>
    <string name="mobile_overview_event_checkin_button">CHECK-IN</string>
    <string name="mobile_overview_event_checked_in_subtitle_android">Great job! You\'ve successfully checked-in for the event.</string>
    <string name="mobile_overview_event_checkin_get_barcode_button">GET BARCODE</string>
    <string name="mobile_overview_event_checkin_tshirt_subtitle">You have earned your NAMIWalks t-shirt. Please stop by the table to pick up your t-shirt.</string>
    <string name="mobile_overview_jersey_create_jersey_modal_title">CREATE VIRTUAL JERSEY</string>
    <string name="mobile_overview_jersey_create_edit_jersey_modal_description">Personalize your virtual jersey with dedication and message about why you Ride to End ALZ.</string>
    <string name="mobile_overview_jersey_create_edit_jersey_modal_dedication">DEDICATION</string>
    <string name="mobile_overview_jersey_create_edit_jersey_modal_message">MESSAGE</string>
    <string name="mobile_overview_jersey_create_jersey_modal_button">CREATE</string>
    <string name="mobile_overview_jersey_create_edit_jersey_modal_cancel">CANCEL</string>
    <string name="mobile_overview_jersey_edit_jersey_modal_delete">DELETE JERSEY</string>
</resources>