<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable name="colorList" type="com.nuclavis.rospark.ColorList" />
</data>
<LinearLayout 
    android:id="@+id/overview_facebook_card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@{colorList.isWhite ? @drawable/card_background_white : @drawable/card_background}"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:padding="0dp">
        <TextView
            style="@style/overview_card_title"
            android:layout_width="0dp"
            android:layout_weight="10000"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:accessibilityHeading="true"
            android:text="@string/mobile_overview_facebook_connect_title"
            android:textAllCaps="true" />
        <LinearLayout
            android:id="@+id/overview_facebook_help_button"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:focusable="false"
            android:gravity="top|right"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:gravity="center"
                android:layout_marginLeft="-25dp"
                android:minWidth="25dp"
                android:src="@drawable/help"
                android:customImageTint="@{colorList.primaryColor}" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:src="@drawable/facebook_transparent_logo"
        app:srcCompat="@drawable/facebook_transparent_logo"
        android:customImageTint="@{colorList.primaryColor}" />
    <TextView
        android:id="@+id/facebook_overview_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:customTextColor="@{colorList.primaryColor}"
        android:textStyle="bold"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/overview_btn_facebook_connect"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="@dimen/_5sdp"
        android:text="@string/mobile_overview_facebook_connect_get_started"
        android:textAllCaps="true"
        android:textSize="@dimen/_12sdp"
        android:customTextColor="@{colorList.buttonTextColor}"
        android:customBackgroundTintColor="@{colorList.buttonColor}" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/facebook_overview_card_creating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_overview_facebook_connect_creating"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textAlignment="center"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/facebook_overview_card_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_overview_facebook_connected_description"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="10dp" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/facebook_overview_url"
        android:contentDescription="@string/mobile_overview_facebook_url_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:background="@drawable/facebook_url_border"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="2sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeStepGranularity="1sp"
        android:lines="1"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/fbFundraiserButtons"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/overview_btn_facebook_view"
            android:layout_height="wrap_content"
            android:layout_width="0dp" 
            android:layout_weight=".40"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/mobile_overview_facebook_connect_view_link"
            android:textAllCaps="true"
            android:textSize="@dimen/_10sdp"
            android:customTextColor="@{colorList.buttonTextColor}"
            android:customBackgroundTintColor="@{colorList.buttonColor}" />

        <Button
            android:id="@+id/overview_btn_facebook_copy"
            android:layout_height="wrap_content"
            android:layout_width="0dp" 
            android:layout_weight=".40"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/mobile_overview_facebook_connect_copy_link"
            android:textAllCaps="true"
            android:customTextColor="@{colorList.buttonTextColor}"
            android:customBackgroundTintColor="@{colorList.buttonColor}"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</LinearLayout>
</layout>