<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable name="colorList" type="com.nuclavis.rospark.ColorList" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight=".85"
    android:elevation="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_7sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:weightSum="10">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_jersey_alert_heading"
                    android:accessibilityLiveRegion="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/create_jersey_alert_title"
                        style="@style/overview_card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_11sdp"
                        android:text="@string/mobile_overview_jersey_create_jersey_modal_title" />
                    <TextView
                        android:text="@string/mobile_alert_close_button"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:accessibilityLiveRegion="1"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    android:customImageTint="@{colorList.primaryColor}"
                    android:src="@drawable/close_x_icon"
                    android:id="@+id/create_jersey_alert_close_button"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:contentDescription="@string/mobile_close_modal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:id="@+id/create_jersey_description" 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="#000"
                    android:text="@string/mobile_overview_jersey_create_edit_jersey_modal_description" />
                <TextView
                    style="@style/overview_card_title"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/mobile_overview_jersey_create_edit_jersey_modal_dedication" />
                <EditText
                    android:id="@+id/input_jersey_dedication"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@drawable/gray_rounded_input"
                    android:inputType="text"
                    android:radius="10dp"
                    android:maxLength="20"
                    android:textColor="#000"
                    android:textColorHint="#52afaa"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="SpeakableTextPresentCheck" />
                <TextView
                    style="@style/overview_card_title"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/mobile_overview_jersey_create_edit_jersey_modal_message" />
                <EditText
                    android:id="@+id/input_jersey_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@drawable/gray_rounded_input"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:singleLine="false"
                    android:maxLength="256"
                    android:radius="10dp"
                    android:textColor="#000"
                    android:textColorHint="#52afaa"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="SpeakableTextPresentCheck" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">
                    <Button
                        android:id="@+id/create_jersey_alert_create_button"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="6.5"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/mobile_overview_jersey_create_jersey_modal_button"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        android:customTextColor="@{colorList.buttonTextColor}"
                    android:customBackgroundTintColor="@{colorList.buttonColor}" />
                    <TextView
                        android:id="@+id/create_jersey_alert_cancel_button"
                        android:layout_width="0dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="3.5"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/mobile_overview_jersey_create_edit_jersey_modal_cancel"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        android:customTextColor="@{colorList.primaryColor}" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="0dp"
                    android:weightSum="10">
                    <TextView
                        android:id="@+id/create_jersey_alert_delete_button"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="8"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/mobile_overview_jersey_edit_jersey_modal_delete"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_12sdp"
                        android:customTextColor="@{colorList.primaryColor}" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>